# nanolob

./: .clang-format  .clang-tidy  .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  README_TODO.md
.github/workflows/: ci.yml
analysis/: adverse_selection.ipynb
bench/: CMakeLists.txt  bench_common.hpp  bench_engine.cpp  bench_main.cpp  bench_ring.cpp  workload.hpp
include/nanolob/: book.hpp  engine.hpp  feed.hpp  flat_hash_map.hpp  pool.hpp  spsc_ring.hpp  types.hpp
include/nanolob/testing/: reference_engine.hpp
replay/: CMakeLists.txt  binance_parser.hpp  book_mirror.hpp  replay_binance.cpp
scripts/: coverage_gate.py  download_binance.py  plot_mm.py
strategy/: CMakeLists.txt  mm_sim.cpp  quote_sim.hpp  strategies.hpp
tests/: CMakeLists.txt  recording_handler.hpp  test_differential.cpp  test_engine.cpp  test_flat_hash_map.cpp  test_pool.cpp  test_replay.cpp  test_spsc_ring.cpp  test_strategy.cpp
